tests/fail/static-variable-with-call/source.lart
include "types";

fn call() -> i32;
var x: i32 = call();
